simpler forcing for longwave test

--- a/examples/formulations.ipynb
+++ b/examples/formulations.ipynb
@@ -62,19 +62,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T = np.linspace(0., 30., 100)\n",
+    "T = np.linspace(-2., 35., 100)\n",
     "T.shape = 1, -1\n",
     "tw = ta = T\n",
-    "cloud = np.full_like(T, 1.)\n",
+    "cloud = np.full_like(T, 0.)\n",
     "lat = np.full_like(T, 50.)\n",
-    "relhum = np.full_like(T, 50.)\n",
-    "sp = np.full_like(T, 102300.)\n",
+    "relhum = np.full_like(T, 0.)\n",
+    "sp = np.full_like(T, 101325.)\n",
     "es, ea, qs, qa, rhoa, ql = np.empty_like(T), np.empty_like(T), np.empty_like(T), np.empty_like(T), np.empty_like(T), np.empty_like(T)\n",
     "fig, ax = matplotlib.pyplot.subplots()\n",
     "for method in pyairsea.LongwaveMethod:\n",
     "    pyairsea.humidity(pyairsea.HumidityMeasure.RELATIVE_HUMIDITY, relhum, sp, tw, ta, es, ea, qs, qa, rhoa)\n",
     "    pyairsea.longwave_radiation(method, lat, tw + 273.15, ta + 273.15, cloud, ea, qa, ql)\n",
-    "    ax.plot(T[0, :], ql[0, :], label=method.name)\n",
+    "    ax.plot(T[0, :], ql[0, :], label=method.name, alpha=0.5)\n",
     "ax.set_xlabel('air/water temperature (degrees Celsius)')\n",
     "ax.set_ylabel('net downward longwave flux (W m-2)')\n",
     "ax.legend()\n",
