committed missing humidity changes; added air density plot to formulations.ipynb

--- a/examples/formulations.ipynb
+++ b/examples/formulations.ipynb
@@ -82,6 +82,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Air density"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T = np.linspace(-2., 35., 100)\n",
+    "T.shape = 1, -1\n",
+    "airp = np.full_like(T, 101325.)  # 1 atm\n",
+    "es = np.empty_like(T)\n",
+    "ea = np.empty_like(T)\n",
+    "qs = np.empty_like(T)\n",
+    "qa = np.empty_like(T)\n",
+    "rhoa = np.empty_like(T)\n",
+    "fig, ax = matplotlib.pyplot.subplots()\n",
+    "for rh in (0., 25., 50., 75., 100.):\n",
+    "    pyairsea.humidity(pyairsea.HumidityMeasure.RELATIVE_HUMIDITY, np.full_like(T, rh), airp, T, T, es, ea, qs, qa, rhoa)\n",
+    "    ax.plot(T[0, :], rhoa[0, :], label='RH = %s %%' % rh, alpha=0.5)\n",
+    "ax.set_xlabel('air/water temperature (degrees Celsius)')\n",
+    "ax.set_ylabel('air density (kg m-3)')\n",
+    "ax.legend()\n",
+    "ax.grid()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
