airsea: added albedo to formulations.ipynb

--- a/examples/formulations.ipynb
+++ b/examples/formulations.ipynb
@@ -65,9 +65,9 @@
     "T = np.linspace(-2., 35., 100)\n",
     "T.shape = 1, -1\n",
     "tw = ta = T\n",
-    "cloud = np.full_like(T, 0.)\n",
+    "cloud = np.full_like(T, 0.5)\n",
     "lat = np.full_like(T, 50.)\n",
-    "relhum = np.full_like(T, 0.)\n",
+    "relhum = np.full_like(T, 98.)\n",
     "sp = np.full_like(T, 101325.)\n",
     "es, ea, qs, qa, rhoa, ql = np.empty_like(T), np.empty_like(T), np.empty_like(T), np.empty_like(T), np.empty_like(T), np.empty_like(T)\n",
     "fig, ax = matplotlib.pyplot.subplots()\n",
@@ -110,6 +110,38 @@
     "ax.set_ylabel('air density (kg m-3)')\n",
     "ax.legend()\n",
     "ax.grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Albedo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zen = np.linspace(0., 90., 100)\n",
+    "yday = np.linspace(0., 365., 101)\n",
+    "albedo = np.empty((yday.size, zen.size))\n",
+    "\n",
+    "def plot(method, ax):\n",
+    "    for i, yd in enumerate(yday):\n",
+    "        pyairsea.albedo_water(method, zen.reshape(1, -1), yd, albedo[i: i + 1, ...])\n",
+    "    pc = ax.contourf(yday, zen, albedo.T, np.linspace(0., 1., 11))\n",
+    "    fig.colorbar(pc, ax=ax)\n",
+    "    ax.set_xlabel('year day')\n",
+    "    ax.set_ylabel('zenith angle (degrees)')\n",
+    "    ax.set_title(method.name)\n",
+    "    print('%s range: %s - %s' % (method.name, albedo.min(), albedo.max()))\n",
+    "\n",
+    "fig, (ax1, ax2) = matplotlib.pyplot.subplots(ncols=2, figsize=(10, 4))\n",
+    "plot(pyairsea.AlbedoMethod.PAYNE, ax1)\n",
+    "plot(pyairsea.AlbedoMethod.COGLEY, ax2)"
    ]
   },
   {
