--- a/examples/formulations.ipynb
+++ b/examples/formulations.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pyairsea\n",
+    "import awex\n",
     "\n",
     "%matplotlib widget\n",
     "import matplotlib.pyplot"
@@ -40,7 +40,7 @@
     "        np.empty_like(w),\n",
     "        np.empty_like(w),\n",
     "    )\n",
-    "    pyairsea.transfer_coefficients(\n",
+    "    awex.transfer_coefficients(\n",
     "        1, Tw, Tw + delta_t, w, cd_mom, cd_sensible, cd_latent\n",
     "    )\n",
     "    ax1.plot(w, cd_mom, label=\"Tw-Ta=%s\" % delta_t)\n",
@@ -84,9 +84,9 @@
     "    np.empty_like(T),\n",
     ")\n",
     "fig, ax = matplotlib.pyplot.subplots()\n",
-    "for method in pyairsea.LongwaveMethod:\n",
-    "    pyairsea.humidity(\n",
-    "        pyairsea.HumidityMeasure.RELATIVE_HUMIDITY,\n",
+    "for method in awex.LongwaveMethod:\n",
+    "    awex.humidity(\n",
+    "        awex.HumidityMeasure.RELATIVE_HUMIDITY,\n",
     "        relhum,\n",
     "        sp,\n",
     "        tw,\n",
@@ -97,7 +97,7 @@
     "        qa,\n",
     "        rhoa,\n",
     "    )\n",
-    "    pyairsea.longwave_radiation(\n",
+    "    awex.longwave_radiation(\n",
     "        method, lat, tw + 273.15, ta + 273.15, cloud, ea, qa, ql\n",
     "    )\n",
     "    ax.plot(T[0, :], ql[0, :], label=method.name, alpha=0.5)\n",
@@ -130,8 +130,8 @@
     "rhoa = np.empty_like(T)\n",
     "fig, ax = matplotlib.pyplot.subplots()\n",
     "for rh in (0.0, 25.0, 50.0, 75.0, 100.0):\n",
-    "    pyairsea.humidity(\n",
-    "        pyairsea.HumidityMeasure.RELATIVE_HUMIDITY,\n",
+    "    awex.humidity(\n",
+    "        awex.HumidityMeasure.RELATIVE_HUMIDITY,\n",
     "        np.full_like(T, rh),\n",
     "        airp,\n",
     "        T,\n",
@@ -169,7 +169,7 @@
     "\n",
     "def plot(method, ax):\n",
     "    for i, yd in enumerate(yday):\n",
-    "        pyairsea.albedo_water(method, zen.reshape(1, -1), yd, albedo[i : i + 1, ...])\n",
+    "        awex.albedo_water(method, zen.reshape(1, -1), yd, albedo[i : i + 1, ...])\n",
     "    pc = ax.contourf(yday, zen, albedo.T, np.linspace(0.0, 1.0, 11))\n",
     "    fig.colorbar(pc, ax=ax)\n",
     "    ax.set_xlabel(\"year day\")\n",
@@ -179,8 +179,8 @@
     "\n",
     "\n",
     "fig, (ax1, ax2) = matplotlib.pyplot.subplots(ncols=2, figsize=(10, 4))\n",
-    "plot(pyairsea.AlbedoMethod.PAYNE, ax1)\n",
-    "plot(pyairsea.AlbedoMethod.COGLEY, ax2)"
+    "plot(awex.AlbedoMethod.PAYNE, ax1)\n",
+    "plot(awex.AlbedoMethod.COGLEY, ax2)"
    ]
   },
   {
