tidy up kondo and ensure non-inf results at w=0

--- a/examples/formulations.ipynb
+++ b/examples/formulations.ipynb
@@ -31,28 +31,30 @@
    "source": [
     "fig, (ax1, ax2, ax3) = matplotlib.pyplot.subplots(nrows=3, figsize=(10, 10))\n",
     "\n",
-    "w = np.linspace(0, 30.0, 100)\n",
+    "w = np.linspace(0, 30.0, 1000)\n",
     "w.shape = -1, 1\n",
     "Tw = np.full_like(w, 10.0 + 273.15)\n",
-    "for delta_t in [-5.0, -2.0, -1.0, 0.0, 1.0, 2.0, 5.0]:\n",
+    "for delta_t in [-20, -10, -5, -2, -1, -0.5, -0.2, 0, 0.2, 0.5, 1, 2, 5, 10, 20][::-1]:\n",
     "    cd_mom, cd_sensible, cd_latent = (\n",
     "        np.empty_like(w),\n",
     "        np.empty_like(w),\n",
     "        np.empty_like(w),\n",
     "    )\n",
     "    awex.transfer_coefficients(\n",
-    "        1, Tw, Tw + delta_t, w, cd_mom, cd_sensible, cd_latent\n",
+    "        1, Tw, Tw - delta_t, w, cd_mom, cd_sensible, cd_latent\n",
     "    )\n",
-    "    ax1.plot(w, cd_mom, label=\"Tw-Ta=%s\" % delta_t)\n",
-    "    ax2.plot(w, cd_sensible, label=\"Tw-Ta=%s\" % delta_t)\n",
-    "    ax3.plot(w, cd_latent, label=\"Tw-Ta=%s\" % delta_t)\n",
+    "    ax1.plot(w, 1000*cd_mom, label=f\"Tw-Ta={delta_t}\")\n",
+    "    ax2.plot(w, 1000*cd_latent, label=f\"Tw-Ta={delta_t}\")\n",
+    "    ax3.plot(w, 1000*cd_sensible, label=f\"Tw-Ta={delta_t}\")\n",
     "for ax in (ax1, ax2, ax3):\n",
     "    ax.grid()\n",
     "    ax.set_xlabel(\"wind speed (m s-1)\")\n",
-    "    ax.legend()\n",
-    "ax1.set_ylabel(\"C_DD (momentum)\")\n",
-    "ax2.set_ylabel(\"C_HD (sensible)\")\n",
-    "ax3.set_ylabel(\"C_ED (latent)\")"
+    "    ax.legend(loc=\"upper right\")\n",
+    "    ax.set_ylim(0, 2.0)\n",
+    "    ax.set_xlim(0, 25.0)\n",
+    "ax1.set_ylabel(\"C_DD (momentum) × 10³\")\n",
+    "ax2.set_ylabel(\"C_ED (latent) × 10³\")\n",
+    "ax3.set_ylabel(\"C_HD (sensible) × 10³\")"
    ]
   },
   {
@@ -193,7 +195,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -207,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
